Fix text size flicker

--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -9,9 +9,7 @@
   --accent-color: #b7455e;
   --sun-color: #f7f78c;
   --very-light-text-color: #ffffff;
-}
 
-:root {
   --background: #ffffff;
   --normal-text-color: #31343f;
   --card-color: #ffffff;
